--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "medal_top_3 = combination(3,9)\n",
+    "medal_top_3 = permutation(9,3)\n",
     "medal_top_3"
    ]
   },
