Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "6.0"
+       "84.0"
       ]
      },
      "execution_count": 6,
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "scholarship_top_3 = permutation(3,9)\n",
+    "scholarship_top_3 = combination(9,3)\n",
     "scholarship_top_3"
    ]
   },
