--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = None\n",
+    "draw_cons = combination(9,3)\n",
     "draw_vow = None"
    ]
   },
