Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = combination(5,2)\n",
-    "draw_vow = None"
+    "draw_cons = combination(6,2)\n",
+    "draw_vow = combination(6,2)"
    ]
   },
   {
