--- a/index.ipynb
+++ b/index.ipynb
@@ -229,22 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-248.25"
+       "0.23809523809523808"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "draw_cons*draw_vow - sample"
+    "draw_cons*draw_vow / sample"
    ]
   },
   {
