Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_5_letters = None"
+    "order_5_letters = permutation(9,3)"
    ]
   },
   {
