--- a/index.ipynb
+++ b/index.ipynb
@@ -296,11 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total, 30240.0 words with 2 consonants and 3 vowels can be formed from our existing letter pool.\n"
+     ]
+    }
+   ],
    "source": [
-    "total_words = None\n",
+    "total_words = order_5_letters\n",
     "print(\"In total,\",  total_words, \"words with 2 consonants and 3 vowels can be formed from our existing letter pool.\")"
    ]
   },
