--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -280,11 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_5_letters = factorial(5)"
+    "order_5_letters = permutation(10,5)"
    ]
   },
   {
