--- a/index.ipynb
+++ b/index.ipynb
@@ -337,7 +337,11 @@
     }
    ],
    "source": [
-    "combination(4,16)"
+    "\n",
+    "first_team = combination(16,4)\n",
+    "second_team = combination(12,4)\n",
+    "third_team = combination(8,4)\n",
+    "fourth_team = combination(4,4)"
    ]
   },
   {
