--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None  # the answer is 2627625.0"
+    " # the answer is 2627625.0\n",
+    "    "
    ]
   },
   {
