--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     " # the answer is 2627625.0\n",
-    "total = "
+    "total = (first_team "
    ]
   },
   {
