--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     " # the answer is 2627625.0\n",
-    "total = (first_team * second_team * third_team * fourth_team ) /"
+    "total = (first_team * second_team * third_team * fourth_team ) / factorial(4)"
    ]
   },
   {
