Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,12 +335,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2627625.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " # the answer is 2627625.0\n",
-    "total = (first_team * second_team * third_team * fourth_team ) / factorial(4)"
+    "total = (first_team * second_team * third_team * fourth_team ) / factorial(4)\n",
+    "total"
    ]
   },
   {
